realiza as alteracoes

--- a/main.css
+++ b/main.css
@@ -1,35 +1,66 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    text-align: center;
-    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background:url(https://www.top10az.com.br/wp-content/uploads/top-10-moedas-mais-usadas-no-mundo-1024x538.jpg);
+    
 }
-.container {
-    width: 300px;
+#form {
+    background-color: white;
     padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(184, 163, 163, 0.2);
+    width: 300px;
+   
 }
-input, select {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
+
+#input-box {
+    display: flex;
+    flex-direction: column;
+}
+
+#texts {
+    margin-bottom: 15px;
+}
+
+label {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+select {
+    padding: 8px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 4px;
+    width: 100%;
 }
+
 button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
+    padding: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
+    background-color: #28a745;
+    color: white;
     cursor: pointer;
+    width: 100%;
 }
+
 button:hover {
-    background-color: #0056b3;
+    background-color: #424342;
 }
-.result {
-    margin-top: 20px;
+
+#limpar button {
+    background-color: #dc3545;
+}
+
+#limpar button:hover {
+    background-color: #c82333;
+}
+input{
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 95%;
 }
