--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     
 }
 #form {
-    background-color: white;
+    background-color: rgb(255, 230, 0);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(184, 163, 163, 0.2);
